Some code simplifications in Comdirect importer
Issue: #3584 #3578